entity_macros/tests/ui/derive/ent/unsupported-field-type-of-tuple.stderr
error: Tuples are not supported as field types
  --> $DIR/unsupported-field-type-of-tuple.rs:18:15
   |
18 |     my_field: (u32, u32),
   |               ^^^^^^^^^^
